Добавлено описание проекта на главнеой странице, кнопка для перехода на вкладку "все проекты"

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,9 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>Student Projects Hub</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Student Projects Hub</h1>
+        <nav>
+            <a href="index.html">Главная</a>
+            <a href="projects.html">Все проекты</a>
+        </nav>
+    </header>
+
+    <main>
+        Это полнофункциональная веб-платформа,
+        предназначенная для систематизации, демонстрации
+        и совместной работы над учебными проектами студентов.
+        Приложение позволяет удобно хранить,
+        просматривать и управлять проектами в одном месте.
+
+        <a href="projects.html"><button class="Projects_List">Перейти к списку проектов.</button></a>
+    </main>
+
+
+    <footer></footer>
 </body>
 </html>
