Добавил стилизацию кнопок для перехода на новые страницы

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Student Projects Hub</title>
+    <title>Student Projects Hub - Главная</title>
 </head>
 <body>
     <header>
-        <h1>Student Projects Hub</h1>
+        <a id="Logo"><h1>Student Projects Hub</h1></a>
         <nav>
             <a href="index.html">Главная</a>
             <a href="projects.html">Все проекты</a>
