--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,21 +8,24 @@
 </head>
 <body>
     <header>
-        <a id="Logo"><h1>Student Projects Hub</h1></a>
         <nav>
-            <a href="index.html">Главная</a>
+            <a href="index.html"><img src="Logo_icon.png" alt="Логотип"> Positivus</a>
+            <a href="#about">О проекте </a>
+            <a href="team">Команда </a>
+            <a href="">Каталог </a>
+            <a href="">Отзывы </a>
+            <a href="">Обратная связь </a>
             <a href="projects.html">Все проекты</a>
+            <a href="">Войти</a>
         </nav>
     </header>
 
     <main>
-        Это полнофункциональная веб-платформа,
-        предназначенная для систематизации, демонстрации
-        и совместной работы над учебными проектами студентов.
-        Приложение позволяет удобно хранить,
-        просматривать и управлять проектами в одном месте.
-
+        <h1>Student <p>Projects Hub</p></h1>
+        учебная платформа для студентов технических специальностей, созданная с целью систематизации, демонстрации и обмена опытом в разработке учебных проектов. 
         <a href="projects.html"><button class="Projects_List">Перейти к списку проектов.</button></a>
+        <img src="megafon.png">
+
     </main>
 
 
