Доделал вид header.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,35 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>Student Projects Hub - Главная</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <nav>
-            <a href="index.html"><img src="Logo_icon.png" alt="Логотип"> Positivus</a>
-            <ul>
-                <li>
-                  <a href="#about">О проекте </a>  
-                </li>
-                <li>
-                    <a href="team">Команда </a>
-                </li>
-                <li>
-                    <a href="">Каталог </a>
-                </li>
-                <li>
-                    <a href="">Отзывы </a>
-                </li>
-                <li>
-                    <a href="">Обратная связь </a>
-                </li>
-                <li>
-                    <a href="projects.html">Все проекты</a>
-                </li>
-
-            </ul>
-            <a href="">Войти</a>
-            
-        </nav>
+    <header class="hat">
+        <div class="header__container">
+            <nav class="header__nav">
+                <a href="index.html"><img src="Logo.png" alt="Логотип"></a>
+                <ul class="header__list">
+                    <li class="header__list-item">
+                        <a href="#about" class="header__list-link">О проекте </a>  
+                    </li>
+                    <li class="header__list-item">
+                        <a href="team" class="header__list-link">Команда </a>
+                    </li>
+                    <li class="header__list-item">
+                        <a href="" class="header__list-link">Каталог </a>
+                    </li>
+                    <li class="header__list-item">
+                        <a href="" class="header__list-link">Отзывы </a>
+                    </li>
+                    <li class="header__list-item">
+                        <a href="" class="header__list-link">Обратная связь </a>
+                    </li>
+                    <li class="header__list-item">
+                        <a href="projects.html" class="header__list-link">Все проекты</a>
+                    </li>
+                </ul>
+                <a href="/" class="header__button">Войти</a>
+            </nav>
+        </div>
     </header>
 
     <main>
