--- a/frontend/index.html
+++ b/frontend/index.html
@@ -40,11 +40,21 @@
     </header>
 
     <main>
-        <h1>Student <p>Projects Hub</p></h1>
-        учебная платформа для студентов технических специальностей, созданная с целью систематизации, демонстрации и обмена опытом в разработке учебных проектов. 
-        <a href="projects.html"><button class="Projects_List">Перейти к списку проектов.</button></a>
-        <img src="megafon.png">
+        <section class="hero">
+            <div class="hero__container">
+                <h1 class="hero__title">Student <p>Projects Hub</p></h1>
+                <p class="hero__descriprion">учебная платформа для студентов технических специальностей, созданная с целью систематизации, демонстрации и обмена опытом в разработке учебных проектов. </p>
+            </div>
+            <img src="megafon.png" class="hero__image">
+            <div class="hero__button">
+                <a href="projects.html" class="hero__projects-list">Перейти к списку проектов</a>
+            </div>
 
+        </section>
+
+
+        
+        
     </main>
 
 
