Сделал отдельную папку для картинок с приемуществами. Сделал секцию приемуществ. Добавил каждой картинке ссылку-заглушку

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -63,9 +63,35 @@
                     Мы предоставляем удобное пространство, где каждый может представить свои работы, <br> изучить проекты коллег и вдохновиться идеями для дальнейшего развития.
                 </div>
             </div>
-
         </sectoin>
 
+        <section class="advantages">
+            <div class="advantages__content">
+                <ul class="advantages__list">
+                    <li class="advantages__list-link">
+                            <a href="/"><img class="list__image" src="listcards/1.png"></a>
+                    </li>
+                    <li class="advantages__list-link">
+                            <a href="/"><img class="list__image" src="listcards/2.png"></a>
+                    </li>
+                    <li class="advantages__list-link">
+                            <a href="/"><img class="list__image" src="listcards/3.png"></a>
+                    </li>
+                    <li class="advantages__list-link">
+                            <a href="/"><img class="list__image" src="listcards/4.png"></a>
+                    </li>
+                    <li class="advantages__list-link">
+                            <a href="/"><img class="list__image" src="listcards/5.png"></a>
+                    </li>
+                    <li class="advantages__list-link">
+                            <a href="/"><img class="list__image" src="listcards/6.png"></a>
+                    </li>
+
+                </ul>
+
+            </div>
+
+        </section>
         
         
     </main>
