Сделал секцию с командой и добавил ссылки на наши гитхабы

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -228,6 +228,24 @@
             </div>
         </section>
 
+        <section class="teammates">
+            <div class="teammates__content">
+                <div class="teammates__list">
+                    <ul>
+                        <li class="teammate">
+                            <a href="https://github.com/Krab1kWW"   class ="teammate__url"> <img src="teammate__Dima.png" alt="Дмитрий"></a>
+                        </li>
+                        <li class="teammate">
+                            <a href="https://github.com/Xeney"   class ="teammate__url"> <img src="teammate__Damir.png" alt="Дмитрий"></a>
+                        </li>
+                        <li class="teammate">
+                            <a href=""   class ="teammate__url"> <img src="teammate__Igor.png" alt="Дмитрий"></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+
         <section class="means">
             <div class="means__content">
                 <h2 class="means__logo">Отзывы</h2> 
@@ -236,6 +254,20 @@
                 </div>
             
             </div>
+        </section>
+
+        <section class="slider">
+
+
+
+        </section>
+
+
+
+        <section class="slider">
+
+
+            
         </section>
 
          <section class="connect">
