начал делать слайдер

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -259,18 +259,25 @@
         <section class="slider">
             <div class="slider__content">
                 <div class="slider__background"></div>
+
+                <li class="slider__list">
+                    <ul class="slider__list-element" id="el1">
+                        <img src="slider/Card1__slider.png" alt="Отзыв преподавателя">
+
+                    </ul>
+                    <ul class="slider__list-element" id="el2">
+                        <img src="slider/Card2__slider.png" alt="Отзыв преподавателя">
+
+                    </ul>
+                    <ul class="slider__list-element" id="el3">
+                        <img src="slider/Card3__slider.png" alt="Отзыв преподавателя">
+
+                    </ul>
+                </li>          
             </div>
-
-
         </section>
 
 
-
-        <section class="slider">
-
-
-            
-        </section>
 
          <section class="connect">
             <div class="connect__content">
