--- a/frontend/index.html
+++ b/frontend/index.html
@@ -297,9 +297,7 @@
             </div>
         </section>
 
-
-
-         <section class="connect">
+         <!-- <section class="connect">
             <div class="connect__content">
                 <h2 class="connect__logo">Свяжитесь с нами</h2> 
                 <div class="connect__descriptoin">
@@ -308,10 +306,46 @@
             
             </div>
         </section>
+
+        <section class="message">
+            <div class="message__content">    
+            </div>
+        </section> -->
+
     </main>
 
 
-    <footer></footer>
+    <footer>
+        <section class="footer">
+            <div class="footer__container">
+                <img src="" alt="">
+                <nav class="footer__nav">
+                    <a href="index.html" class="footer__logo"><img src="logo/Logo__white.png" alt="Логотип"></a>
+                    <ul class="footer__list">
+                        <li class="footer__list-item">
+                            <a href="#about" class="footer__list-link">О проекте </a>  
+                        </li>
+                        <li class="footer__list-item">
+                            <a href="team" class="footer__list-link">Команда </a>
+                        </li>
+                        <li class="footer__list-item">
+                            <a href="" class="footer__list-link">Каталог </a>
+                        </li>
+                        <li class="footer__list-item">
+                            <a href="" class="footer__list-link">Отзывы </a>
+                        </li>
+                    </ul>
+                    
+                </nav>
+            </div>
+
+
+        </section>
+
+
+    </footer>
+
+
     <script>
         function toggleStep(clickedCard) {
             // Находим все карточки
@@ -329,7 +363,6 @@
             });
         }
     </script>
-
 
    <script>
         const track = document.querySelector('.slider__track');
