Сделай файл style для окна с проектами. Сделал header для окна с проектами

--- a/frontend/projects.html
+++ b/frontend/projects.html
@@ -4,8 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student Projects Hub - Все проекты</title>
+    <link rel="stylesheet" href="allProjects__style.css">
 </head>
 <body>
-    Все
+    <header class="hat">
+        <div class="header__container">
+            <nav class="header__nav">
+                <a href="index.html" class="header__logo"><img src="logo/Logo__White-projects.png" alt="Логотип"></a>
+                <ul class="header__list">
+                    <li class="header__list-item">
+                        <a href="projects.html" class="header__list-link">Каталог проектов</a>
+                    </li>
+                    <li class="header__list-item">
+                        <a href="#about__ID" class="header__list-link">Обратная связь</a>  
+                    </li>
+                    <li class="header__list-item" id="Exit__button">
+                        <a href="/" class="header__button">Выйти</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
 </body>
 </html>
