--- a/frontend/projects.html
+++ b/frontend/projects.html
@@ -26,5 +26,45 @@
         </div>
     </header>
 
+    <main>
+        <section class="profile">
+            <div class="profile__content"></div>
+
+        </section>
+
+
+
+
+    </main>
+
+
+
+    <footer>
+        <section class="footer">
+            <div class="footer__container">
+                <img src="" alt="">
+                <nav class="footer__nav">
+                    <a href="index.html" class="footer__logo"><img src="logo/Logo__white.png" alt="Логотип"></a>
+                    <ul class="footer__list">
+                        <li class="footer__list-item">
+                            <a href="#about__ID" class="footer__list-link">О проекте </a>  
+                        </li>
+                        <li class="footer__list-item">
+                            <a href="#team__ID" class="footer__list-link">Команда </a>
+                        </li>
+                        <li class="footer__list-item">
+                            <a href="#feedback__ID" class="footer__list-link">Примеры проектов</a>
+                        </li>
+                        <li class="footer__list-item">
+                            <a href="#means__ID" class="footer__list-link">Отзывы </a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="footer__content"></div>
+
+        </section>
+    </footer>
+
 </body>
 </html>
