Сделал пример профиля

--- a/frontend/projects.html
+++ b/frontend/projects.html
@@ -28,7 +28,25 @@
 
     <main>
         <section class="profile">
-            <div class="profile__content"></div>
+            <div class="profile__content">
+                <div class="profile__avatar">
+                    <img src="all__projects/avatar.png" alt="Аватар">
+                    <div class="profile__role"><h4>Backend Developer</h4></div>
+                    <div class="profile__edit"><button class="profile__edit-button">Изменить профиль</button></div>
+                    
+
+
+                </div>
+                <div class="about">
+                    <h1 class="profile__name">Фамилия Имя Отчество</h1>
+                    <h3 class="profile__description">Описание автора Описание автора е авторОписание автораа Описание автора <h3>
+                </div>
+                <div class="social">
+                    <img src="all__projects/vk.svg" alt="">
+
+                </div>
+
+            </div>
 
         </section>
 
