--- a/frontend/projects.html
+++ b/frontend/projects.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student Projects Hub - Все проекты</title>
     <link rel="stylesheet" href="allProjects__style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="hat">
@@ -96,6 +99,9 @@
 
         </section>
     </footer>
+
+
+    
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             // Открытие/закрытие меню
