Сделал возможность удалять проект

--- a/frontend/projects.html
+++ b/frontend/projects.html
@@ -52,13 +52,16 @@
             <div class="AddProject__content">
                 <div class="AddProject__text">
                     <h4 class="text-head">Добавить новый проект</h4>
-                    <h6 class="text-description">Внимание платформа в работает в тестовом режиме</h6>
+                    <h6 class="text-description">Внимание платформа работает в тестовом режиме</h6>
                 </div>
                 <div class="AddProject__add">
-                    <button class="AddProject__add-button"><img src="all__projects/plus.png" alt="Добавить проект" class="AddProject__plus-img"></button>
+                    <a href="edit.html">
+                        <button class="AddProject__add-button">
+                            <img src="all__projects/plus.png" alt="Добавить проект" class="AddProject__plus-img">
+                        </button>
+                    </a>
                 </div>
             </div>
-            
         </section>
 
         <section class="cards-container">
